--- a/angular.json
+++ b/angular.json
@@ -80,9 +80,12 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
+              "src/favicon.ico",
+              "src/assets",
               {
-                "glob": "**/*",
-                "input": "public"
+                "glob": "_redirects",
+                "input": "src/assets",
+                "output": "/"
               }
             ],
             "styles": [
